# spec-doc-tools

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py  spec_config.json
remote_mcp_client/: README.md  __init__.py  client.py  config.py  mcp_config.json  server.py
spec_doc_tools/: __init__.py  spec_cli.py  spec_config.py  spec_docs.py  spec_mcp_server.py  spec_server.py
tests/: conftest.py  test_spec_docs.py  test_spec_server_v2.py
