[build-system]
requires = ["setuptools>=69", "wheel", "tomli>=2.0; python_version<'3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-doc-tools"
version = "0.1.0"
description = "Spec document TOC, extraction, grep, and FastMCP wrappers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "beautifulsoup4>=4.12",
  "fastmcp>=2.14",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "requests>=2.31",
]

[project.scripts]
spec-toc = "spec_doc_tools.spec_cli:toc"
spec-extract = "spec_doc_tools.spec_cli:extract"
spec-api = "spec_doc_tools.spec_server:main"
spec-mcp = "spec_doc_tools.spec_mcp_server:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["spec_doc_tools", "remote_mcp_client"]
